<resources>
    <string name="app_name">Kboard</string>
    <string name="app_version">Version: </string>

    <string name="number_row">Number row</string>
    <string name="key_preview">Key preview</string>
    <string name="key_vibration">Keypress vibration</string>
    <string name="key_sound">Keypress sound</string>
    <string name="test_here">Test here</string>
    <string name="save">Save</string>

    <string name="color_key_normal">Normal Key color</string>
    <string name="color_key_pressed">Pressed key color</string>
    <string name="color_key_font">Font key color</string>

    <string name="about">About</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>


</resources>
