<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    android:scrollbarStyle="insideInset">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context=".activity_main">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/number_row"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_number_row"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="60dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="80dp"
            android:text="@string/key_preview"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_key_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="120dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="140dp"
            android:text="@string/key_vibration"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_keypress_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="180dp"
            android:background="?android:attr/listDivider" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:text="@string/key_sound"
            android:textColor="@color/textColor"
            android:textSize="16sp"/>

        <Switch
            android:id="@+id/switch_keypress_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="240dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/buttonNormalKeyColor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/color_key_normal"
            android:layout_marginTop="245dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img_normal_key_color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="245dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorKeyNormal"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="300dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/buttonPressedKeyColor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/color_key_pressed"
            android:layout_marginTop="305dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img_pressed_key_color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="305dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorKeyPressed"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="360dp"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/buttonFontKeyColor"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/color_key_font"
            android:layout_marginTop="365dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/img_font_key_color"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="365dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorKeyFont"
            tools:ignore="ContentDescription" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="420dp"
            android:background="?android:attr/listDivider" />



    </RelativeLayout>
</ScrollView>